--- a/sccs_its/pom.xml
+++ b/sccs_its/pom.xml
@@ -15,6 +15,16 @@
 		<egovframework.rte.version>3.8.0</egovframework.rte.version>
 	</properties>
 	
+	<distributionManagement>
+ 		<repository>
+ 			<uniqueVersion>false</uniqueVersion>
+ 			<id>corp1</id>
+ 			<name>Corporate Repository</name>
+ 			<url>file://D:/20220426</url> <!-- 배포할 경로 -->
+ 			<layout>default</layout>
+ 		</repository>
+	</distributionManagement>
+
 	<repositories>
 		<repository>
 			<id>mvn2s</id>
