--- a/sccs_its/pom.xml
+++ b/sccs_its/pom.xml
@@ -522,7 +522,8 @@
  					<goal>copy-resources</goal>
  				</goals>
  				<configuration>
- 					<outputDirectory>D:/git_project/sccs/sccs_ui/clx-build</outputDirectory>
+<!--  					<outputDirectory>D:/git_project/sccs/sccs_ui/clx-build</outputDirectory> -->
+ 					<outputDirectory>>${basedir}/target/sccs_its/ui</outputDirectory>
  					<resources>
  						<resource>
 	 						<directory>.exbuilder-fragments/sccs_ui</directory>
